--- a/website/newsletter/249/index.mdx
+++ b/website/newsletter/249/index.mdx
@@ -1,12 +1,17 @@
 ---
 slug: /249
-title: "This Week In React #249: ..."
+title: "This Week In React #249: TanStack, Fast-Refresh, MDX, Storybook, nuqs, AI Elements, Three-Fiber | Expo, Legend List, Uniwind, New Arch, Rock, Screens, IAP, Glass, Sound, NavigationBar | Interop, Linting, Safari"
 authors: [slorber]
 date: 09-10-2025
-unlisted: true
 ---
 
 Hi everyone!
+
+This week is relatively calm in terms of React news, but I’m saving an exciting React core update for next week, so don't miss my next email 👀\!
+
+On the React Native side, we have so many links that it’s a bit overwhelming 😆 And Expo SDK 54 is not even out yet\!
+
+Beware of the massive [npm supply chain attack](https://socket.dev/blog/npm-author-qix-compromised-in-major-supply-chain-attack) affecting very popular packages such as `chalk` and `debug`. To mitigate the impact of compromised dependencies, package managers such as pnpm and Yarn are considering [an option to avoid installing freshly published packages](https://github.com/pnpm/pnpm/issues/9921). This could give enough time for security scanners to report vulnerabilities.
 
 <!-- truncate -->
 
@@ -49,7 +54,6 @@ All this without changing your backend endpoints. And you can go even further an
 ---
 
 - 💸 [Learn how to build a video summarization app using Next.js 15 & Strapi in this step-by-step tutorial guide](https://strapi.io/blog/epic-next-js-15-tutorial-part-1-learn-next-js-by-building-a-real-life-project?utm_campaign=19282052-Newsletter%20Sponsorships&utm_source=React&utm_medium=2nd%20sponsor&utm_term=Epic-NextJS-tutorial)
-- 👀 [React Core PR \- Release `<Activity>` in Canary](https://github.com/facebook/react/pull/34374): The long-awaited React component is approaching prime time, has been battle-tested in production, and is becoming available in React's canary workflow for the community to try out and provide feedback. This exciting new primitive can hide a React subtree while preserving its state, and keep rendering it with lower priority. It also unlocks new pre-rendering patterns along the way.
 - 📣 [Vercel – Open SDK strategy](https://vercel.com/blog/open-sdk-strategy): Articulates the commitment to a new ‘Open SDK’ strategy, against platform lock-in, for Next.js in particular but all their other frameworks as well. It’s worth mentioning that SST/OpenNext folks [tweeted](https://x.com/thdxr/status/1963507144453509619) that the platform stickiness doesn’t seem intentional, and things have improved.
 - 🗓️ [React Advanced London](https://reactadvanced.com/?utm_source=Newsletter&utm_medium=ThisWeekinReact) -  🇬🇧 London - 28 Nov & 1 Dec. Featuring: Kadi Kraman (Expo), Bela Bohlender (react-three), Mike Grabowski (RN Core Team), Jani Eväkallio & more! 10% discount code "TWIR".
 - 📜 [React Fast Refresh: Next-Gen Hot Reloading Explained](https://leapcell.io/blog/react-fast-refresh): A deep dive into how React implements hot reloading.
