--- a/website/newsletter/250/index.mdx
+++ b/website/newsletter/250/index.mdx
@@ -28,18 +28,13 @@ import Support from "../_support.mdx";
 
 Check out 5 of our most feature-packed [React Grid examples](https://www.infragistics.com/blogs/react-grid-examples/?utm_source=this-week-in-react&utm_medium=referral&utm_campaign=ignite-ui-react&utm_term=newsletter-sponsorship&utm_content=5-react-grid-examples):
 
-*   📊 **Sales Dashboard** – Pivot Grid for KPI analysis
-
-*   🏢 **HR/Org Chart** – Tree Grid for hierarchies
-
-*   📦 **ERP/Inventory** – Hierarchical Grid for stock tracking
-
-*   💹 **Financial Portfolio** – Data Grid with conditional styling
-
-*   🚗 **Fleet Management** – Master-Detail Grid with maps
+- 📊 **Sales Dashboard** – Pivot Grid for KPI analysis
+- 🏢 **HR/Org Chart** – Tree Grid for hierarchies
+- 📦 **ERP/Inventory** – Hierarchical Grid for stock tracking
+- 💹 **Financial Portfolio** – Data Grid with conditional styling
+- 🚗 **Fleet Management** – Master-Detail Grid with maps
 
 Our blog [5 React Grid Examples to Transform Your Next Project](https://www.infragistics.com/blogs/react-grid-examples/?utm_source=this-week-in-react&utm_medium=referral&utm_campaign=ignite-ui-react&utm_term=newsletter-sponsorship&utm_content=5-react-grid-examples) explores each sample, the code behind the apps, key components and features, and more. See how Ignite UI for React can accelerate the delivery of your next React project.
-
 
 ---
 
@@ -48,6 +43,7 @@ Our blog [5 React Grid Examples to Transform Your Next Project](https://www.infr
 <Todo />
 
 - 💸 [The Road to Next - Master Full-Stack Web Development with Next.js 15 and React 19](https://www.road-to-next.com/?utm_source=newsletter&utm_medium=email&utm_campaign=this_week_in_react_2.3)
+- 💸 [CodeRabbit CLI - An AI code review tool that runs directly in your terminal, seamlessly integrating with Claude, Cursor, and other coding agents](https://coderabbit.link/thisweekinreact)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -63,12 +59,12 @@ React logs are now in Sentry.
 
 But they aren’t just any logs, they’re special logs ✨:
 
-*   Search logs alongside stack traces and releases
-*   Trace errors through logs, errors, and performance data in one connected flow
-*   Cut down on the “guess → check → repeat” cycle
+- Search logs alongside stack traces and releases
+- Trace errors through logs, errors, and performance data in one connected flow
+- Cut down on the “guess → check → repeat” cycle
 
-Whether you’re chasing a React error, a slow API query, or a third-party timeout, having all your context in one place means less tab-hunting and more fixing.  
-  
+Whether you’re chasing a React error, a slow API query, or a third-party timeout, having all your context in one place means less tab-hunting and more fixing.
+
 [🪵](https://sentry.io/product/logs/?utm_source=thisweekinreact&utm_medium=paid-community&utm_campaign=logs-fy26q3-logslaunch&utm_content=react-link-logs-ga-launch-trysentry)[Try Logs in Sentry](https://sentry.io/product/logs/?utm_source=thisweekinreact&utm_medium=paid-community&utm_campaign=logs-fy26q3-logslaunch&utm_content=newsletter-logs-ga-launch-trysentry)
 
 ---
