--- a/website/newsletter/250/index.mdx
+++ b/website/newsletter/250/index.mdx
@@ -44,6 +44,7 @@ Our blog [5 React Grid Examples to Transform Your Next Project](https://www.infr
 
 - 💸 [The Road to Next - Master Full-Stack Web Development with Next.js 15 and React 19](https://www.road-to-next.com/?utm_source=newsletter&utm_medium=email&utm_campaign=this_week_in_react_2.3)
 - 💸 [CodeRabbit CLI - An AI code review tool that runs directly in your terminal, seamlessly integrating with Claude, Cursor, and other coding agents](https://coderabbit.link/thisweekinreact)
+- 🗓 [React Paris 2026](https://react.paris/?utm_source=thisweekinreact) - 🇫🇷 Paris - 26 & 27 March. First speaker lineup just dropped! Tanner Linsley, Kitze, Una, Gabriel Pichot and Elise Patrikainen are part of the lineup, and CFP just opened today!
 
 <SubscribeFormEmbed placement="middle" />
 
