--- a/website/newsletter/250/index.mdx
+++ b/website/newsletter/250/index.mdx
@@ -3,14 +3,13 @@ slug: /250
 title: "This Week In React #250: Activity, React Router, CSS-in-JS, RSC, React-Query | Expo, iOS blur, AI, Lynx, Squircle, DataList, Liquid Glass | TC39, pnpm, Bun, Browserslist, Webkit"
 authors: [slorber]
 date: 09-17-2025
-unlisted: true
 ---
 
 Hi everyone!
 
-As promised, this week is quite exciting, with a very powerful React core `<Activity>` component now in canary, close to becoming stable. We also have a massive Expo SDK release!
+As promised, this week is quite exciting, with a very powerful React core `<Activity>` component now in canary, close to becoming stable. We also have a massive Expo SDK 54 release!
 
-npm supply chain attacks continue, this time with a Shai-Hulud worm that infects open-source maintainers and automatically publish compromised packages. Great timing for pnpm 10.16 to come up with a new option to mitigate risks.
+npm supply chain attacks continue, this time with a [Shai-Hulud worm](https://www.aikido.dev/blog/s1ngularity-nx-attackers-strike-again) that infects open-source maintainers and automatically publishes compromised packages. Great timing for pnpm 10.16 to come up with a new mitigation option.
 
 <!-- truncate -->
 
