--- a/website/newsletter/250/index.mdx
+++ b/website/newsletter/250/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /250
-title: "This Week In React #250: Activity, React Router, CSS-in-JS, RSC, React-Query, useEffect | Expo, iOS blur, AI, Lynx, Squircle, DataList, Liquid Glass | TC39, pnpm, Bun, Browserslist, Webkit"
+title: "This Week In React #250: Activity, React Router, CSS-in-JS, RSC, React-Query, useEffect | Expo, iOS blur, AI, Lynx, Squircle, DataList, Liquid Glass | TC39, pnpm, Bun, Browserslist, WebKit"
 authors: [slorber]
 date: 09-17-2025
 ---
